# sticker-finder

./: .gitignore  .travis.yml  CHANGELOG.md  Justfile  LICENSE.md  Makefile  README.md  alembic.ini  env.py  initdb.py  main.py  pyproject.toml  requirements.txt  stickerfinder.toml  test.py  travis_stickerfinder.toml
.github/workflows/: lint.yml  repo_lockdown.yml
i18n/: English.yml
migrations/: env.py
migrations/versions/: 2018_09_26_2f3f005f663d_add_several_flags_and_columns.py  2018_09_26_60be4019a8eb_remove_useless_indices_.py  2018_09_27_a3c459e8860a_add_tag_emoji_flag_and_completely_.py  2018_09_30_7d6fd72f32db_bigint_and_vote_ban.py  2018_09_30_97be35ea927d_random_tagging_and_user_authorized_flag.py  2018_09_30_fd4744f74703_chat_flags.py  2018_10_03_199b4c5329ac_tasks.py  2018_10_05_1031ff4e8182_revert_user_changes.py  2018_10_05_c90dd14cf037_inline_search.py  2018_10_08_19eabf5fe31f_add_set_task_and_bot_instance_logging.py  2018_10_08_7db1ca9c1c50_remove_task_check_constraint.py  2018_10_09_da3156362cdc_chat_fix_sticker.py  2018_10_10_9e78c2866289_add_original_emojis.py  2018_10_13_d270d8393fc6_remove_text_from_changes.py  2018_10_14_ad8be3fcd898_onupdate_cascade.py  2018_10_14_ef5c7ce8e2b7_cascade_on_task_delete.py  2018_10_15_850a2cda19df_nsfw_flag.py  2018_10_17_963070a023d2_ondelete_cascade_for_sticker_set.py  2018_10_18_d4ec0cd1dff4_gin_index.py  2018_10_21_8dc9f8aff0b1_inline_search.py  2018_10_22_85ad52b28135_add_furry_tag.py  2018_10_24_8fc208f074b8_query_offset.py  2018_10_28_4cbb3aa3f114_remove_inline_query_fields.py  2018_10_28_6007d57b5adb_add_inline_query_request.py  2018_10_28_f8f6a6d47d96_rename_inline_search.py  2018_10_31_8b7c01c04a55_stickerset_deleted_flag.py  2018_11_03_157ccc4d9d0b_multi_language_support.py  2018_11_06_69f7d688a411_missing_columns.py  2018_11_06_ca61ed4a75fd_remove_boolean_server_defaults_for_.py  2018_11_06_dd1bcd34b36d_language_delete_cascades.py  2018_11_11_09ed6db5a163_unique_inline_query_offset.py  2018_11_11_6f86ae03db9b_sticker_set_review_task.py  2018_11_12_9c0ccea0f519_add_relation_from_change_to_task.py  2018_11_14_fd5458abc68a_add_sticker_set_language.py  2018_11_28_e28425b95092_fuck_languages.py  2018_11_30_2daaec987d76_fix_inline_query_request.py  2018_11_30_6c854954ca33_fuck_languages_part_2.py  2018_11_30_7ddf4da81c22_rename_default_language.py  2018_11_30_b179e344cc02_check_constraints.py  2018_12_01_367c804c5170_sticker_pack_search.py  (+36 more)
queries/: anonymize.sql  change_user_tags_language.sql  changes_by_user.sql  clean_authorized_user_data.sql  clear_user_data.sql  inline_query_results.sql
stickerfinde/logic/: tag.py
stickerfinder/: config.example.py  config.py  config.travis.py  db.py  enum.py  helper.py  i18n.py  sentry.py  session.py  stickerfinder.py  tg_helper.py
stickerfinder/commands/: __init__.py  callback.py  jobs.py  maintenance.py  sticker_set.py  tag.py  tasks.py  user.py
stickerfinder/helper/: __init__.py  callback.py  cleanup.py  corrections.py  display.py  image.py  inline_query.py  keyboard.py  maintenance.py  plot.py  session.py  sticker_set.py  tag.py  tag_mode.py  (+2 more)
tests/: conftest.py  factories.py  fixtures.py  helper.py
(+72 files in other folders)
