[tool.poetry]
name = "sticker-finder"
version = "1.0.0"
description = "A telegram bot for searching all the stickers (just like @gif)."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/sticker-finder"

[tool.poetry.dependencies]
python = ">=3.7, <4"
sentry-sdk = "^1"
alembic = "^1"
python-telegram-bot = "^13"
SQLAlchemy = "^1"
sqlalchemy-utils = "^0.38"
psycopg2-binary = "^2"
imutils = "^0.5"
toml = "^0.10"
python-i18n = { version = "^0.3", extras = ["yaml"] }

matplotlib = "^3"
pandas = "^1"
pillow = "^9"

[tool.poetry.dev-dependencies]
pytest-mock = "^3"
pytest = "^7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
