[tool.poetry]
name = "sticker-finder"
version = "1.0.0"
description = "A telegram bot for searching all the stickers (just like @gif)."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/sticker-finder"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1"
imutils = "^0.5"
matplotlib = "^3"
pandas = "^1"
pillow = "^9"
psycopg2-binary = "^2"
python-i18n = { version = "^0.3", extras = ["yaml"] }
python-telegram-bot = "^13"
sentry-sdk = "^1"
SQLAlchemy = "^2"
sqlalchemy-utils = "^0.39"
toml = "^0.10"
typer = "^0.7"

[tool.poetry.dev-dependencies]
autoflake = "^2"
black = { version = "*", allow-prereleases = true }
flake8 = "^6"
isort = "^5"
pytest = "^7"
pytest-mock = "^3"
types-toml = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
line_length = 88
profile = "black"
