[tool.poetry]
name = "sticker-finder"
version = "1.0.0"
description = "A telegram bot for searching all the stickers (just like @gif)."
authors = ["Arne Beer <contact@arne.beer>"]
license = "MIT"
repository = "https://github.com/nukesor/sticker-finder"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1"
imutils = "^0.5"
matplotlib = "^3"
pandas = "^2"
pillow = "^10"
psycopg2-binary = "^2"
python-i18n = { version = "^0.3", extras = ["yaml"] }
python-telegram-bot = "^13"
sentry-sdk = "^1"
SQLAlchemy = "^1"
sqlalchemy-utils = "^0.38"
toml = "^0.10"
typer = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-mock = "^3"
ruff = "^0.1"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
exclude = [
    ".venv",
    "__init__.py",
]

[tool.ruff.lint]
select = [
    "E", # Pycodestyle
    "F", # Pyflakes
    "I", # Isort
    "UP", # Language feature updates
    "RUF", # Ruff Rules
]
fixable = [
    "E",
    "F",
    "I",
    "UP", # Language feature updates
    "RUF", # Ruff Rules
]
ignore = [
    "RUF001",
    "E501",
]

# 4. Ignore `E402` (import violations) in all `__init__.py` and misc files.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
